add config jenkinsfile_backend

--- a/To_Do_List/frontend-build/Jenkinsfile
+++ b/To_Do_List/frontend-build/Jenkinsfile
@@ -42,30 +42,29 @@ pipeline {
 
         stage('Dependencies Installation') {
             steps {
-            container('node') {
-                script {
-                    sh '''
-                        cd "${WORK_DIR}"
+                container('node') {
+                    script {
+                        sh '''
+                            cd "${WORK_DIR}"
 
-                        if [ ! -f "package.json" ]; then
-                            exit 1
-                        fi
+                            if [ ! -f "package.json" ]; then
+                                exit 1
+                            fi
 
-                        # On utilise directement le lien symbolique vers le PVC node_modules
-                        if [ ! -L "node_modules" ]; then
-                            rm -rf node_modules
-                            ln -sf "${NODE_MODULES_PVC_PATH}/cache" node_modules
-                        fi
+                            if [ ! -L "node_modules" ]; then
+                                rm -rf node_modules
+                                ln -sf "${NODE_MODULES_PVC_PATH}/cache" node_modules
+                            fi
 
-                        npm ci
+                            npm install --prefer-offline --no-audit --progress=false
 
-                        cp package-lock.json ${NODE_MODULES_PVC_PATH}/package-lock.json.bak || true
-                    '''
+                            cp package-lock.json ${NODE_MODULES_PVC_PATH}/package-lock.json.bak || true
+                        '''
+                    }
                 }
             }
-
-            }
         }
+
 
         stage('Docker Login') {
             steps {
