add config jenkinsfile_backend

--- a/To_Do_List_Backend/Dockerfile
+++ b/To_Do_List_Backend/Dockerfile
@@ -4,25 +4,24 @@ LABEL org.opencontainers.image.source="todo-backend"
 
 WORKDIR /app
 
-
 COPY . .
 
-
 RUN npm install
-
 
 RUN apt-get update && apt-get install -y \
     python3 \
     python3-pip \
+    python3-venv \
     git \
     curl \
     vim \
-    && pip3 install requests \
+    && python3 -m venv /opt/venv \
+    && /opt/venv/bin/pip install requests \
     && npm install -g typescript jest
 
+ENV PATH="/opt/venv/bin:$PATH"
 
 RUN dd if=/dev/zero of=/app/dummyfile bs=1M count=500
-
 
 RUN mkdir -p /app/data
 
