--- a/To_Do_List/Dockerfile
+++ b/To_Do_List/Dockerfile
@@ -1,14 +1,13 @@
-FROM node:20-alpine AS builder
-WORKDIR /app
-# Mount node_modules from PVC to avoid re-installing
-COPY package*.json ./
-RUN npm ci
-COPY . .
-RUN npm run build
-
 FROM nginx:latest
+
+# Copie la configuration nginx personnalisée
 COPY nginx.conf /etc/nginx/nginx.conf
+
+# Supprime les anciens fichiers HTML
 RUN rm -rf /usr/share/nginx/html/*
-COPY --from=builder /app/dist/untitled/browser/ /usr/share/nginx/html/
+
+# Copie les fichiers buildés dans Jenkins
+COPY dist/untitled/browser/ /usr/share/nginx/html/
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
