--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -35,6 +35,10 @@ pipeline {
               npm config set cache ${NODE_MODULES_PVC_PATH}/.npm --global
               echo "Installation des dépendances npm avec cache partagé PVC"
               npm ci --loglevel verbose --cache=${NODE_MODULES_PVC_PATH}/.npm
+              echo "✅ Vérification du contenu du cache npm partagé PVC:"
+              du -sh ${NODE_MODULES_PVC_PATH}/.npm
+              ls -la ${NODE_MODULES_PVC_PATH}/.npm/_cacache/index-v5 | head -10
+
             '''
           }
         }
