--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -35,7 +35,7 @@ pipeline {
               npm config set cache ${NODE_MODULES_PVC_PATH}/.npm --global
               echo "Installation des dépendances npm avec cache partagé PVC"
                mkdir -p ${NODE_MODULES_PVC_PATH}/.npm
-               chmod -R 777 ${NODE_MODULES_PVC_PATH}/.npm
+               sudo chmod -R 777 ${NODE_MODULES_PVC_PATH}/.npm
                npm ci --cache=${NODE_MODULES_PVC_PATH}/.npm --prefer-offline --loglevel verbose
               echo " Vérification du contenu du cache npm partagé PVC:"
               du -sh ${NODE_MODULES_PVC_PATH}/.npm
