--- a/To_Do_List_Backend/backend-build/Jenkinsfile
+++ b/To_Do_List_Backend/backend-build/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline {
               echo "Installation des dépendances npm avec cache partagé PVC"
                mkdir -p ${NODE_MODULES_PVC_PATH}/.npm
                chmod -R 777 ${NODE_MODULES_PVC_PATH}/.npm
-              npm ci --prefer-offline --cache=/mnt/node_modules_cache/.npm --loglevel verbose
+              npm ci --offline --cache=/mnt/node_modules_cache/.npm --loglevel verbose --no-audit
 
               echo " Vérification du contenu du cache npm partagé PVC:"
               du -sh ${NODE_MODULES_PVC_PATH}/.npm
