--- a/To_Do_List_Backend/k8s-network-policies/deny-egress-internet.yaml
+++ b/To_Do_List_Backend/k8s-network-policies/deny-egress-internet.yaml
@@ -1,10 +1,11 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: deny-all-egress
+  name: allow-essential-egress
   namespace: jenkins-developer
 spec:
   podSelector: {}
   policyTypes:
     - Egress
-  egress: []
+    - Ingress
+
